"""line_analyzer - Qt application for line analysis

Note: This application requires Qt5 and OpenGL.
Build with: bazel build //apps/line_analyzer:app_line_analyzer
"""

load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//tools/bazel:qt5.bzl", "qt5_moc", "qt5_uic")

package(default_visibility = ["//visibility:public"])

# Qt5 system include paths
QT5_COPTS = [
    "-isystem/usr/include/x86_64-linux-gnu/qt5",
    "-isystem/usr/include/x86_64-linux-gnu/qt5/QtCore",
    "-isystem/usr/include/x86_64-linux-gnu/qt5/QtGui",
    "-isystem/usr/include/x86_64-linux-gnu/qt5/QtWidgets",
    "-isystem/usr/include/x86_64-linux-gnu/qt5/QtOpenGL",
    "-isystem/usr/include/x86_64-linux-gnu/qt5/QtPrintSupport",
    "-fPIC",
]

# Headers that contain Q_OBJECT and need MOC processing
MOC_HEADERS = [
    "accuracypanel.h",
    "analyseroptions.h",
    "connectionoptimizer.h",
    "continuityoptimizer.h",
    "controlwindow.h",
    "detectorprofilepanel.h",
    "helpers.h",
    "lineanalyser2d.h",
    "pofuncplot.h",
    "precisionoptimizer.h",
    "preprocessing.h",
    "profileanalyzer.h",
    "quiver.h",
]

# UI files for UIC processing
UI_FILES = [
    "accuracypanel.ui",
    "analyseroptions.ui",
    "connectionoptimizer.ui",
    "continuityoptimizer.ui",
    "controlwindow.ui",
    "detectorprofilepanel.ui",
    "lineanalyser2d.ui",
    "pofuncplot.ui",
    "precisionoptimizer.ui",
    "preprocessing.ui",
    "profileanalyzer.ui",
    "quiver.ui",
]

# Generate moc_*.cpp files from headers with Q_OBJECT
qt5_moc(
    name = "line_analyzer_moc",
    hdrs = MOC_HEADERS,
    includes = [
        ".",
        "apps/line_analyzer",
    ],
    deps = glob(["*.h"]),
)

# Generate ui_*.h files from .ui files
qt5_uic(
    name = "line_analyzer_uic",
    srcs = UI_FILES,
)

# Main application binary
cc_binary(
    name = "app_line_analyzer",
    srcs = [
        "accuracypanel.cpp",
        "analyseroptions.cpp",
        "connectionoptimizer.cpp",
        "continuityoptimizer.cpp",
        "controlwindow.cpp",
        "detectorprofilepanel.cpp",
        "helpers.cpp",
        "lineanalyser2d.cpp",
        "main.cpp",
        "pofuncplot.cpp",
        "precisionoptimizer.cpp",
        "preprocessing.cpp",
        "profileanalyzer.cpp",
        "quiver.cpp",
        # Headers
        "help_button.hpp",
        "latool.h",
    ] + MOC_HEADERS + [
        # MOC-generated files
        ":line_analyzer_moc",
    ],
    copts = QT5_COPTS + [
        "-I$(GENDIR)/apps/line_analyzer",  # For ui_*.h files
    ],
    data = [
        "//resources:windmill",
    ],
    linkopts = [
        "-lGL",
    ],
    tags = [
        "opengl",
        "qt5",
    ],
    deps = [
        ":line_analyzer_uic",
        "//libs/algorithm:lib_algorithm",
        "//libs/edge:lib_edge",
        "//libs/imgproc:lib_imgproc",
        "//libs/lsd:lib_lsd",
        "//libs/utility:lib_utility",
        "//third-party/qplot:lib_qplot",
        "//third-party/qplot3d:lib_qplot3d",
        "@opencv",
        "@qt5//:qt5_core",
        "@qt5//:qt5_gui",
        "@qt5//:qt5_opengl",
        "@qt5//:qt5_printsupport",
        "@qt5//:qt5_widgets",
    ],
)
