"""line_analyzer - Qt application for line analysis

Note: This application requires Qt5 and OpenGL.
Build with: bazel build //apps/line_analyzer:app_line_analyzer
"""

load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//tools/bazel:qt5.bzl", "qt5_moc", "qt5_uic")

package(default_visibility = ["//visibility:public"])

# Qt5 system include paths
QT5_COPTS = [
    "-isystem/usr/include/x86_64-linux-gnu/qt5",
    "-isystem/usr/include/x86_64-linux-gnu/qt5/QtCore",
    "-isystem/usr/include/x86_64-linux-gnu/qt5/QtGui",
    "-isystem/usr/include/x86_64-linux-gnu/qt5/QtWidgets",
    "-isystem/usr/include/x86_64-linux-gnu/qt5/QtOpenGL",
    "-isystem/usr/include/x86_64-linux-gnu/qt5/QtPrintSupport",
    "-fPIC",
]

# ---------------------------------------------------------------------------
# Source file organization
# ---------------------------------------------------------------------------
# Core application sources (src/)
CORE_SRCS = [
    "src/controlwindow.cpp",
    "src/helpers.cpp",
    "src/main.cpp",
    "src/preprocessing.cpp",
    "src/quiver.cpp",
]

CORE_HDRS = [
    "src/controlwindow.h",
    "src/help_button.hpp",
    "src/helpers.h",
    "src/latool.h",
    "src/preprocessing.h",
    "src/quiver.h",
]

# Extension sources (extensions/*/)
EXTENSION_SRCS = [
    "extensions/accuracy/accuracypanel.cpp",
    "extensions/connectionoptimizer/connectionoptimizer.cpp",
    "extensions/continuityoptimizer/continuityoptimizer.cpp",
    "extensions/detectorprofile/detectorprofilepanel.cpp",
    "extensions/imageanalyzer/imageanalyzerpanel.cpp",
    "extensions/lineanalyser2d/analyseroptions.cpp",
    "extensions/lineanalyser2d/lineanalyser2d.cpp",
    "extensions/pofuncplot/pofuncplot.cpp",
    "extensions/precisionoptimizer/precisionoptimizer.cpp",
    "extensions/profileanalyzer/profileanalyzer.cpp",
]

EXTENSION_HDRS = [
    "extensions/accuracy/accuracypanel.h",
    "extensions/connectionoptimizer/connectionoptimizer.h",
    "extensions/continuityoptimizer/continuityoptimizer.h",
    "extensions/detectorprofile/detectorprofilepanel.h",
    "extensions/imageanalyzer/imageanalyzerpanel.h",
    "extensions/lineanalyser2d/analyseroptions.h",
    "extensions/lineanalyser2d/lineanalyser2d.h",
    "extensions/pofuncplot/pofuncplot.h",
    "extensions/precisionoptimizer/precisionoptimizer.h",
    "extensions/profileanalyzer/profileanalyzer.h",
]

# Headers requiring MOC processing (Q_OBJECT macro)
MOC_HEADERS = [
    "src/controlwindow.h",
    "src/helpers.h",
    "src/preprocessing.h",
    "src/quiver.h",
    "extensions/accuracy/accuracypanel.h",
    "extensions/connectionoptimizer/connectionoptimizer.h",
    "extensions/continuityoptimizer/continuityoptimizer.h",
    "extensions/detectorprofile/detectorprofilepanel.h",
    "extensions/imageanalyzer/imageanalyzerpanel.h",
    "extensions/lineanalyser2d/analyseroptions.h",
    "extensions/lineanalyser2d/lineanalyser2d.h",
    "extensions/pofuncplot/pofuncplot.h",
    "extensions/precisionoptimizer/precisionoptimizer.h",
    "extensions/profileanalyzer/profileanalyzer.h",
]

# UI files for UIC processing
UI_FILES = [
    "ui/controlwindow.ui",
    "ui/preprocessing.ui",
    "ui/quiver.ui",
    "extensions/accuracy/accuracypanel.ui",
    "extensions/connectionoptimizer/connectionoptimizer.ui",
    "extensions/continuityoptimizer/continuityoptimizer.ui",
    "extensions/detectorprofile/detectorprofilepanel.ui",
    "extensions/imageanalyzer/imageanalyzerpanel.ui",
    "extensions/lineanalyser2d/analyseroptions.ui",
    "extensions/lineanalyser2d/lineanalyser2d.ui",
    "extensions/pofuncplot/pofuncplot.ui",
    "extensions/precisionoptimizer/precisionoptimizer.ui",
    "extensions/profileanalyzer/profileanalyzer.ui",
]

# Include paths so that #include "foo.h" works across directories
INCLUDE_PATHS = [
    "-Iapps/line_analyzer/src",
    "-Iapps/line_analyzer/extensions/accuracy",
    "-Iapps/line_analyzer/extensions/connectionoptimizer",
    "-Iapps/line_analyzer/extensions/continuityoptimizer",
    "-Iapps/line_analyzer/extensions/detectorprofile",
    "-Iapps/line_analyzer/extensions/imageanalyzer",
    "-Iapps/line_analyzer/extensions/lineanalyser2d",
    "-Iapps/line_analyzer/extensions/pofuncplot",
    "-Iapps/line_analyzer/extensions/precisionoptimizer",
    "-Iapps/line_analyzer/extensions/profileanalyzer",
]

# ---------------------------------------------------------------------------
# Qt code generation
# ---------------------------------------------------------------------------

# Generate moc_*.cpp files from headers with Q_OBJECT
qt5_moc(
    name = "line_analyzer_moc",
    hdrs = MOC_HEADERS,
    includes = [
        ".",
        "apps/line_analyzer/extensions/accuracy",
        "apps/line_analyzer/extensions/connectionoptimizer",
        "apps/line_analyzer/extensions/continuityoptimizer",
        "apps/line_analyzer/extensions/detectorprofile",
        "apps/line_analyzer/extensions/imageanalyzer",
        "apps/line_analyzer/extensions/lineanalyser2d",
        "apps/line_analyzer/extensions/pofuncplot",
        "apps/line_analyzer/extensions/precisionoptimizer",
        "apps/line_analyzer/extensions/profileanalyzer",
        "apps/line_analyzer/src",
    ],
    deps = glob([
        "src/*.h",
        "src/*.hpp",
        "extensions/**/*.h",
    ]),
)

# Generate ui_*.h files from .ui files
qt5_uic(
    name = "line_analyzer_uic",
    srcs = UI_FILES,
)

# ---------------------------------------------------------------------------
# Application binary
# ---------------------------------------------------------------------------

cc_binary(
    name = "app_line_analyzer",
    srcs = CORE_SRCS + EXTENSION_SRCS + CORE_HDRS + EXTENSION_HDRS + [
        ":line_analyzer_moc",
    ],
    copts = QT5_COPTS + INCLUDE_PATHS + [
        "-I$(GENDIR)/apps/line_analyzer",  # For ui_*.h files
    ],
    data = [
        "//resources:example_lines",
        "//resources:presets",
        "//resources:windmill",
        "//resources/datasets:ground_truth",
    ],
    linkopts = [
        "-lGL",
    ],
    tags = [
        "opengl",
        "qt5",
    ],
    deps = [
        ":line_analyzer_uic",
        "//libs/algorithm:lib_algorithm",
        "//libs/edge:lib_edge",
        "//libs/imgproc:lib_imgproc",
        "//libs/lsd:lib_lsd",
        "//libs/utility:lib_utility",
        "//third-party/qplot:lib_qplot",
        "//third-party/qplot3d:lib_qplot3d",
        "@opencv",
        "@qt5//:qt5_core",
        "@qt5//:qt5_gui",
        "@qt5//:qt5_opengl",
        "@qt5//:qt5_printsupport",
        "@qt5//:qt5_widgets",
    ],
)
