"""line_analyzer - Qt application for line analysis

Note: This application requires Qt5 and OpenGL.
Build with: bazel build //apps/line_analyzer:app_line_analyzer
"""

load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//tools/bazel:qt5.bzl", "qt5_moc", "qt5_uic")

package(default_visibility = ["//visibility:public"])

# Qt5 system include paths
QT5_COPTS = [
    "-isystem/usr/include/x86_64-linux-gnu/qt5",
    "-isystem/usr/include/x86_64-linux-gnu/qt5/QtCore",
    "-isystem/usr/include/x86_64-linux-gnu/qt5/QtGui",
    "-isystem/usr/include/x86_64-linux-gnu/qt5/QtWidgets",
    "-isystem/usr/include/x86_64-linux-gnu/qt5/QtOpenGL",
    "-isystem/usr/include/x86_64-linux-gnu/qt5/QtPrintSupport",
    "-fPIC",
]

# ---------------------------------------------------------------------------
# Source file organization
# ---------------------------------------------------------------------------
# Core application sources (src/)
CORE_SRCS = [
    "src/analyzer.cpp",
    "src/help_viewer.cpp",
    "src/helpers.cpp",
    "src/main.cpp",
    "src/preprocessing.cpp",
]

CORE_HDRS = [
    "src/analyzer.h",
    "src/help_button.hpp",
    "src/help_viewer.h",
    "src/helpers.h",
    "src/latool.h",
    "src/markdown_converter.hpp",
    "src/preprocessing.h",
]

# Extension sources (extensions/*/)
EXTENSION_SRCS = [
    "extensions/accuracy/accuracypanel.cpp",
    "extensions/continuity_optimizer/continuity_optimizer.cpp",
    "extensions/detector_profile/detector_profile_panel.cpp",
    "extensions/image_analyzer/image_analyzer_panel.cpp",
    "extensions/ground_truth_inspector/analyser_options.cpp",
    "extensions/ground_truth_inspector/ground_truth_inspector.cpp",
    "extensions/3d_profile_plot/3d_profile_plot.cpp",
    "extensions/precision_optimizer/precision_optimizer.cpp",
    "extensions/profile_analyzer/profile_analyzer.cpp",
    "extensions/quivers/quiverpanel.cpp",
]

EXTENSION_HDRS = [
    "extensions/accuracy/accuracypanel.h",
    "extensions/continuity_optimizer/continuity_optimizer.h",
    "extensions/detector_profile/detector_profile_panel.h",
    "extensions/image_analyzer/image_analyzer_panel.h",
    "extensions/ground_truth_inspector/analyser_options.h",
    "extensions/ground_truth_inspector/ground_truth_inspector.h",
    "extensions/3d_profile_plot/3d_profile_plot.h",
    "extensions/precision_optimizer/precision_optimizer.h",
    "extensions/profile_analyzer/profile_analyzer.h",
    "extensions/quivers/quiverpanel.h",
]

# Headers requiring MOC processing (Q_OBJECT macro)
MOC_HEADERS = [
    "src/analyzer.h",
    "src/help_viewer.h",
    "src/helpers.h",
    "src/preprocessing.h",
    "extensions/accuracy/accuracypanel.h",
    "extensions/continuity_optimizer/continuity_optimizer.h",
    "extensions/detector_profile/detector_profile_panel.h",
    "extensions/image_analyzer/image_analyzer_panel.h",
    "extensions/ground_truth_inspector/analyser_options.h",
    "extensions/ground_truth_inspector/ground_truth_inspector.h",
    "extensions/3d_profile_plot/3d_profile_plot.h",
    "extensions/precision_optimizer/precision_optimizer.h",
    "extensions/profile_analyzer/profile_analyzer.h",
    "extensions/quivers/quiverpanel.h",
]

# UI files for UIC processing
UI_FILES = [
    "ui/analyzer.ui",
    "ui/preprocessing.ui",
    "extensions/accuracy/accuracypanel.ui",
    "extensions/continuity_optimizer/continuity_optimizer.ui",
    "extensions/detector_profile/detector_profile_panel.ui",
    "extensions/image_analyzer/image_analyzer_panel.ui",
    "extensions/ground_truth_inspector/analyser_options.ui",
    "extensions/ground_truth_inspector/ground_truth_inspector.ui",
    "extensions/3d_profile_plot/3d_profile_plot.ui",
    "extensions/precision_optimizer/precision_optimizer.ui",
    "extensions/profile_analyzer/profile_analyzer.ui",
    "extensions/quivers/quiverpanel.ui",
]

# Include paths so that #include "foo.h" works across directories
INCLUDE_PATHS = [
    "-Iapps/line_analyzer/src",
    "-Iapps/line_analyzer/extensions/accuracy",
    "-Iapps/line_analyzer/extensions/continuity_optimizer",
    "-Iapps/line_analyzer/extensions/detector_profile",
    "-Iapps/line_analyzer/extensions/image_analyzer",
    "-Iapps/line_analyzer/extensions/ground_truth_inspector",
    "-Iapps/line_analyzer/extensions/3d_profile_plot",
    "-Iapps/line_analyzer/extensions/precision_optimizer",
    "-Iapps/line_analyzer/extensions/profile_analyzer",
    "-Iapps/line_analyzer/extensions/quivers",
]

# ---------------------------------------------------------------------------
# Qt code generation
# ---------------------------------------------------------------------------

# Generate moc_*.cpp files from headers with Q_OBJECT
qt5_moc(
    name = "line_analyzer_moc",
    hdrs = MOC_HEADERS,
    includes = [
        ".",
        "apps/line_analyzer/extensions/3d_profile_plot",
        "apps/line_analyzer/extensions/accuracy",
        "apps/line_analyzer/extensions/continuity_optimizer",
        "apps/line_analyzer/extensions/detector_profile",
        "apps/line_analyzer/extensions/ground_truth_inspector",
        "apps/line_analyzer/extensions/image_analyzer",
        "apps/line_analyzer/extensions/precision_optimizer",
        "apps/line_analyzer/extensions/profile_analyzer",
        "apps/line_analyzer/extensions/quivers",
        "apps/line_analyzer/src",
    ],
    deps = glob([
        "src/*.h",
        "src/*.hpp",
        "extensions/**/*.h",
    ]),
)

# Generate ui_*.h files from .ui files
qt5_uic(
    name = "line_analyzer_uic",
    srcs = UI_FILES,
)

# ---------------------------------------------------------------------------
# Application binary
# ---------------------------------------------------------------------------

cc_binary(
    name = "app_line_analyzer",
    srcs = CORE_SRCS + EXTENSION_SRCS + CORE_HDRS + EXTENSION_HDRS + [
        ":line_analyzer_moc",
    ],
    copts = QT5_COPTS + INCLUDE_PATHS + [
        "-I$(GENDIR)/apps/line_analyzer",  # For ui_*.h files
    ],
    data = [
        "//resources:example_challenge",
        "//resources:example_lines",
        "//resources:presets",
        "//resources:windmill",
        "//resources/datasets:ground_truth",
    ] + glob([
        "README.md",
        "extensions/*/README.md",
    ]),
    linkopts = [
        "-lGL",
    ],
    tags = [
        "opengl",
        "qt5",
    ],
    deps = [
        ":line_analyzer_uic",
        "//libs/algorithm:lib_algorithm",
        "//libs/edge:lib_edge",
        "//libs/imgproc:lib_imgproc",
        "//libs/lsd:lib_lsd",
        "//libs/utility:lib_utility",
        "//third-party/qplot:lib_qplot",
        "//third-party/qplot3d:lib_qplot3d",
        "@opencv",
        "@qt5//:qt5_core",
        "@qt5//:qt5_gui",
        "@qt5//:qt5_opengl",
        "@qt5//:qt5_printsupport",
        "@qt5//:qt5_widgets",
    ],
)
