"""Performance evaluation binaries"""

load("@rules_cc//cc:defs.bzl", "cc_binary")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "eval_performance",
    srcs = glob(
        [
            "*.cpp",
            "*.hpp",
        ],
        allow_empty = True,
    ),
    data = [
        # BSDS500 from external GitHub repository (auto-downloaded)
        "@bsds500//:all",
        # MDB from local resources (requires ./tools/scripts/setup_mdb_dataset.sh)
        "//resources/datasets:mdb_f",
        "//resources/datasets:mdb_h",
        "//resources/datasets:mdb_q",
    ],
    deps = [
        "//libs/edge:lib_edge",
        "//libs/eval:lib_eval",
        "//libs/imgproc:lib_imgproc",
        "//libs/lfd:lib_lfd",
        "//libs/lsd:lib_lsd",
        "//libs/utility:lib_utility",
        "@opencv",
    ],
)
