"""Python evaluation tools — preset optimization and ground truth conversion."""

load("@rules_python//python:defs.bzl", "py_binary")

package(default_visibility = ["//visibility:public"])

# Parameter preset optimization script
# Usage:
#   bazel run //evaluation/python:optimize_presets -- \
#       --ground-truth resources/datasets/ground_truth/york_urban_gt.csv \
#       --image-dir resources/datasets/YorkUrban/images \
#       --samples 300
py_binary(
    name = "optimize_presets",
    srcs = ["tools/optimize_presets.py"],
    data = [
        "//resources/datasets:ground_truth",
        "//resources/datasets:wireframe",
        "//resources/datasets:york_urban",
    ],
    main = "tools/optimize_presets.py",
    deps = [
        "//libs/algorithm/python:le_algorithm_lib",
        "//libs/geometry/python:le_geometry_lib",
        "//libs/lsd/python:le_lsd_lib",
        "@pip//numpy",
        "@pip//pillow",
    ],
)

# LBD descriptor benchmark — accuracy + runtime across HPatches sequences
# Usage:
#   bazel run //evaluation/python:lbd_benchmark
#   bazel run //evaluation/python:lbd_benchmark -- --idx-range 2 4 --num-band 11
py_binary(
    name = "lbd_benchmark",
    srcs = ["tools/lbd_benchmark.py"],
    data = [
        "//resources/datasets:hpatches",
    ],
    main = "tools/lbd_benchmark.py",
    deps = [
        "//libs/lfd/python:le_lfd_lib",
        "//libs/lsd/python:le_lsd_lib",
        "//python/lsfm",
        "@pip//numpy",
        "@pip//pillow",
    ],
)

# LBD parameter sweep — compare numBand / widthBand configurations
# Usage:
#   bazel run //evaluation/python:lbd_param_sweep
#   bazel run //evaluation/python:lbd_param_sweep -- --params 9,7 11,7 13,9
py_binary(
    name = "lbd_param_sweep",
    srcs = [
        "tools/lbd_benchmark.py",
        "tools/lbd_param_sweep.py",
    ],
    data = [
        "//resources/datasets:hpatches",
    ],
    main = "tools/lbd_param_sweep.py",
    deps = [
        "//libs/lfd/python:le_lfd_lib",
        "//libs/lsd/python:le_lsd_lib",
        "//python/lsfm",
        "@pip//numpy",
        "@pip//pillow",
    ],
)

# Detector statistics — accuracy evaluation across datasets
# Usage:
#   bazel run //evaluation/python:detector_statistics -- \
#       --ground-truth resources/datasets/ground_truth/york_urban_gt.csv \
#       --image-dir resources/datasets/YorkUrban/images \
#       --max-images 20
py_binary(
    name = "detector_statistics",
    srcs = ["tools/detector_statistics.py"],
    data = [
        "//resources/datasets:ground_truth",
        "//resources/datasets:wireframe",
        "//resources/datasets:york_urban",
    ],
    main = "tools/detector_statistics.py",
    deps = [
        "//libs/algorithm/python:le_algorithm_lib",
        "//libs/geometry/python:le_geometry_lib",
        "//libs/lsd/python:le_lsd_lib",
        "@pip//numpy",
        "@pip//pillow",
    ],
)

# 3D line reconstruction benchmark — stereo triangulation evaluation on MDB
# Usage:
#   bazel run //evaluation/python:reconstruction_benchmark
#   bazel run //evaluation/python:reconstruction_benchmark -- \
#       --methods midpoint plane opencv --scenes Adirondack Piano
py_binary(
    name = "reconstruction_benchmark",
    srcs = ["tools/reconstruction_benchmark.py"],
    data = [
        "//resources/datasets:mdb_h",
    ],
    main = "tools/reconstruction_benchmark.py",
    deps = [
        "//libs/geometry/python:le_geometry_lib",
        "//libs/lfd/python:le_lfd_lib",
        "//libs/lsd/python:le_lsd_lib",
        "//python/lsfm",
        "@pip//numpy",
        "@pip//pillow",
    ],
)
